--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -106,6 +106,7 @@ _facet.by.type=Per soort object
 _facet.by.user.tag=Per gebruikers tag
 _facet.by.year=Per jaar
 _facet.has.digital.object=Heeft digitaal object
+_facet.has.images.only=Alleen afbeeldingen
 _locale.AL=Albanië
 _locale.AM=Armenië
 _locale.AT=Oosterijk
@@ -205,6 +206,8 @@ _metadata.dcterms.replaces=Vervangt
 _metadata.dcterms.requires=Vereist
 _metadata.dcterms.spatial=Plaats van vervaardiging
 _metadata.dcterms.temporal=Periode
+_metadata.delving.dimensions=Afmeting
+_metadata.delving.owner=Eigenaar
 _metadata.icn.acquisitionMeans=Wijze van verwerving
 _metadata.icn.acquisitionYear=Jaar van verwerving
 _metadata.icn.acquiredWithHelpFrom:Verworven met steun van
@@ -310,9 +313,10 @@ _search.boolean.not=niet
 _search.boolean.or=of
 _search.field.any.field=Elk veld
 _search.field.country=Land
-_search.field.creator=Auteur
+_search.field.creator=Vervaardiger
 _search.field.date=Datum
 _search.field.description=Omschrijving
+_search.field.keyword=Trefwoord
 _search.field.provider=Aanbieder
 _search.field.subject=Onderwerp
 _search.field.title=Titel
