--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -103,6 +103,7 @@ _facet.by.type=By type
 _facet.by.user.tag=By us
 _facet.by.year=By year
 _facet.has.digital.object=Has digital object
+_facet.has.images.only=Images only
 _locale.AL=Albania
 _locale.AM=Armenia
 _locale.AT=Austria
@@ -208,6 +209,8 @@ _metadata.dcterms.replaces=Replaces
 _metadata.dcterms.requires=Requires
 _metadata.dcterms.spatial=Spatial coverage
 _metadata.dcterms.temporal=Temporal coverage
+_metadata.delving.dimensions=Dimensions
+_metadata.delving.owner=Owner
 _metadata.europeana.country=Country
 _metadata.europeana.dataProvider=Provider
 _metadata.europeana.provider=Provider
@@ -324,6 +327,7 @@ _search.field.creator=Creator
 _search.field.date=Date
 _search.field.date.range=Date range
 _search.field.description=Description
+_search.field.keyword=Keyword
 _search.field.provider=Provider
 _search.field.subject=Subject
 _search.field.title=Title
