--- a/core/src/main/resources/i18n/messages_nb.properties
+++ b/core/src/main/resources/i18n/messages_nb.properties
@@ -176,7 +176,7 @@ _metadata.abm.contentProvider=Institusjon
 _metadata.abm.county=Fylke
 _metadata.abm.data.provider=Tilbyder
 _metadata.abm.municipality=Kommune
-_metadata.abm.namedPlace=Named place
+_metadata.abm.namedPlace=Sted
 _metadata.abm.aboutPerson=Personer
 _metadata.dc.contributor=Bidragsyter
 _metadata.dc.coverage=Dekning
