--- a/core/src/main/resources/i18n/messages_no.properties
+++ b/core/src/main/resources/i18n/messages_no.properties
@@ -176,7 +176,7 @@ _metadata.abm.contentProvider=Institusjon
 _metadata.abm.county=Fylke
 _metadata.abm.data.provider=Tilbyder
 _metadata.abm.municipality=Kommune
-_metadata.abm.namedPlace=Named place
+_metadata.abm.namedPlace=Stad
 _metadata.abm.aboutPerson=Personar
 _metadata.dc.contributor=Bidragsyter
 _metadata.dc.coverage=Dekning
