tr. dc_coverage: vervaardiging plaats

--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -177,7 +177,7 @@ _locale.sl=Sloveens (slv)
 _locale.sr=Servisch (ser)
 _locale.sv=Zweeds (zwe)
 _metadata.dc.contributor=Met bijdrage(n) van
-_metadata.dc.coverage=Herkomst
+_metadata.dc.coverage=Vervaardiging plaats
 _metadata.dc.creator=Vervaardiger
 _metadata.dc.date=Vervaardigingsdatum
 _metadata.dc.description=Beschrijving
