--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -39,6 +39,7 @@ _action.search.order.by=Sorteren op
 _action.see.all.related.items=Bekijk alle gerelateerde items
 _action.send=Verstuur
 _action.share.with.friend=Deel met een vriend
+_action.view.enlarge.image=Afbeelding vergroten
 _action.view.in.original.context=Bekijk in oorspronkelijke context
 _cms.administration.images=Afbeeldingen beheren
 _cms.administration.pages=Paginas beheren
