--- a/core/src/main/resources/i18n/messages_en.properties
+++ b/core/src/main/resources/i18n/messages_en.properties
@@ -41,6 +41,7 @@ _action.search.order.by=Order by
 _action.see.all.related.items=See all related items
 _action.send=Send
 _action.share.with.friend=Share with a friend
+_action.view.enlarge.image=Enlarge image
 _action.view.in.original.context=View in original context
 _cms.administration.images=Image administration
 _cms.administration.pages=Page administration
