overlays able to pick up different content types now, though overlay size is fixed. links to 'enlarge' > overlay, and 'original context' some new translation tags

--- a/core/src/main/resources/i18n/messages_no.properties
+++ b/core/src/main/resources/i18n/messages_no.properties
@@ -41,6 +41,9 @@ _action.search.order.by=Sorter etter
 _action.see.all.related.items=Se alle relaterte objekt
 _action.send=Send
 _action.share.with.friend=Del med ein venn
+_action.view.alternate=Alternate view
+_action.view.basic=Basic view
+_action.view.enlarge.image=Forstørre bildet
 _action.view.in.original.context=Sjå i opphaveleg kontekst
 _cms.administration.images=Biletadministrasjon
 _cms.administration.pages=Sideadiministrasjon
