--- a/core/src/main/resources/i18n/messages_nb.properties
+++ b/core/src/main/resources/i18n/messages_nb.properties
@@ -41,6 +41,9 @@ _action.search.order.by=Sorter etter
 _action.see.all.related.items=Se alle relaterte objekt
 _action.send=Send
 _action.share.with.friend=Del med en venn
+_action.view.alternate=Alternate view
+_action.view.basic=Basic view
+_action.view.enlarge.image=Forstørre bildet
 _action.view.in.original.context=Se i opprinnelig kontekst
 _cms.administration.images=Bildeadministrasjon
 _cms.administration.pages=Sideadministrasjon
