--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -182,6 +182,7 @@ _metadata.abm.data.provider=Data provider
 _metadata.abm.municipality=Municipality
 _metadata.abm.namedPlace=Named place
 _metadata.abm.aboutPerson=About Person
+_metadata.icn.material=Material
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Coverage
 _metadata.dc.creator=Author
