--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -52,6 +52,7 @@ _cms.delete=Verwijderen
 _cms.edit=Bewerken
 _cms.existing.images=Bestaande afbeeldingen
 _cms.existing.pages=Bestaande paginas
+_cms.find=vind
 _cms.goto.upload=Ga naar Uploaden
 _cms.html.editor.show.hide=Toon / verberg HTML editor
 _cms.image.change=Afbeelding aanpassen
@@ -248,6 +249,7 @@ _mine.saved.items=Bewaarde items
 _mine.saved.searches=Bewaarde zoekopdrachten
 _mine.saved.tags=Bewaarde tags
 _mine.user.information=Gebruikersinformatie
+_mine.user.last.login.date=Laastse inlogdatum
 _mine.user.notification.emailformaterror=Controleer of uw email correct is opgemaakt en probeer het opnieuw
 _mine.user.notification.emailnotregistered=Email adres is niet geregistreerd
 _mine.user.notification.emailsendfailed=Email kan niet worden verzonden
@@ -279,6 +281,7 @@ _mine.user.register.repeat.password=Herhaal wachtwoord
 _mine.user.register.requiredfield=Dit is een verplicht veld
 _mine.user.register.username.choose=Kies een gebruikersnaam
 _mine.user.register.username.explain=Uw gebruikersnaam wordt weergegeven wanneer u bent ingelogd
+_mine.user.registration.date=Registratie datum
 _mine.user.registration.notification.succeed=U bent met succes geregistreerd
 _mine.user.validation.disclaimer.unchecked=Voorwaarden moeten geaccepteerd worden
 _mine.user.validation.password.long=Wachtwoord te lang
