Misc fixes for the support additional facets for ICN fields

--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -183,6 +183,7 @@ _metadata.abm.municipality=Municipality
 _metadata.abm.namedPlace=Named place
 _metadata.abm.aboutPerson=About Person
 _metadata.icn.material=Material
+_metadata.icn.collection=Collection
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Coverage
 _metadata.dc.creator=Author
