--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2010 DELVING BV
+# Copyright 2011 DELVING BV
 #
 # Licensed under the EUPL, Version 1.1 or as soon they
 # will be approved by the European Commission - subsequent
@@ -214,6 +214,7 @@ _metadata.icn.acquisitionMeans=Wijze van verwerving
 _metadata.icn.acquisitionYear=Jaar van verwerving
 _metadata.icn.acquiredWithHelpFrom:Verworven met steun van
 _metadata.icn.collectionPart=Deelcollectie
+_metadata.icn.collection=Collectie
 _metadata.icn.creatorYearOfBirth=Vervaardiger geboortejaar
 _metadata.icn.location=Locatie
 _metadata.icn.material=Materiaal
