fixed some localisation issues

--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -184,6 +184,7 @@ _metadata.abm.namedPlace=Named place
 _metadata.abm.aboutPerson=About Person
 _metadata.icn.material=Material
 _metadata.icn.collection=Collection
+_metadata.icn.technique=Technique
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Coverage
 _metadata.dc.creator=Author
