MAT improved, conflicts (and there are some) throw RuntimeException ExceptionResolver logging always, it was eating exceptions

--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -176,9 +176,9 @@ _locale.sk=Slovak (slo)
 _locale.sl=Slovenian (slv)
 _locale.sr=Serbian (scc)
 _locale.sv=Swedish (sve/swe)
-_metadata.abm.contentProvider=Provider
+_metadata.abm.contentProvider=Content Provider
 _metadata.abm.county=County
-_metadata.abm.data.provider=Data provider
+_metadata.abm.data.provider=Data Provider
 _metadata.abm.municipality=Municipality
 _metadata.abm.namedPlace=Named place
 _metadata.abm.aboutPerson=About Person
@@ -218,7 +218,7 @@ _metadata.dcterms.temporal=Temporal coverage
 _metadata.delving.dimensions=Dimensions
 _metadata.delving.owner=Owner
 _metadata.europeana.country=Country
-_metadata.europeana.dataProvider=Provider
+_metadata.europeana.dataProvider=Data Provider
 _metadata.europeana.provider=Provider
 _metadata.europeana.type=Type
 _metadata.is.about=Is about
