--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -194,7 +194,7 @@ _metadata.dc.source=Bron
 _metadata.dc.subject=Trefwoorden
 _metadata.dc.title=Titel
 _metadata.dc.type=Soort object
-_metadata.dcterms.alternative=Titel
+_metadata.dcterms.alternative=Alternatief
 _metadata.dcterms.conformsTo=Voldoet aan
 _metadata.dcterms.hasFormat=Heeft formaat
 _metadata.dcterms.hasPart=Is onderdeel
