Translations added for fields that the delving_themes.xml requires

--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -210,9 +210,14 @@ _metadata.dcterms.spatial=Plaats van vervaardiging
 _metadata.dcterms.temporal=Periode
 _metadata.delving.dimensions=Afmeting
 _metadata.delving.owner=Eigenaar
+_metadata.europeana.country=Land
+_metadata.europeana.dataProvider=Data-aanbieder
+_metadata.europeana.provider=Aanbieder
+_metadata.europeana.type=Type
+_metadata.europeana.year=Jaar
 _metadata.icn.acquisitionMeans=Wijze van verwerving
 _metadata.icn.acquisitionYear=Jaar van verwerving
-_metadata.icn.acquiredWithHelpFrom:Verworven met steun van
+_metadata.icn.acquiredWithHelpFrom=Verworven met steun van
 _metadata.icn.collectionPart=Deelcollectie
 _metadata.icn.collection=Collectie
 _metadata.icn.creatorYearOfBirth=Vervaardiger geboortejaar
