--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -182,9 +182,6 @@ _metadata.abm.data.provider=Data Provider
 _metadata.abm.municipality=Municipality
 _metadata.abm.namedPlace=Named place
 _metadata.abm.aboutPerson=About Person
-_metadata.icn.material=Material
-_metadata.icn.collection=Collection
-_metadata.icn.technique=Technique
 _metadata.dc.contributor=Contributor
 _metadata.dc.coverage=Coverage
 _metadata.dc.creator=Author
@@ -221,6 +218,23 @@ _metadata.europeana.country=Country
 _metadata.europeana.dataProvider=Data Provider
 _metadata.europeana.provider=Provider
 _metadata.europeana.type=Type
+_metadata.europeana.year=Year
+
+
+_metadata.icn.material=Material
+_metadata.icn.collection=Collection
+_metadata.icn.technique=Technique
+_metadata.icn.creatorYearOfBirth=Creator Birth
+
+_metadata.icn.acquisitionMeans=Means of Aquisition
+_metadata.icn.acquisitionYear=Year Acquired
+_metadata.icn.acquiredWithHelpFrom=Acquired with help from
+_metadata.icn.collectionPart=Part
+_metadata.icn.location=Location
+_metadata.icn.physicalState=Physical State
+_metadata.icn.province=Province
+_metadata.icn.purchasePrice=Purchase Price
+
 _metadata.is.about=Is about
 _metadata.searchfield.contributor=Contributor
 _metadata.searchfield.dataprovider=Provider
