Dutch error message was missing

--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -298,6 +298,7 @@ _mine.user.validation.username.in.use=Is in gebruik. Kies een andere gebruikerna
 _mine.user.validation.username.invalid=Gebrukersnaam mag zijn: 2 t/m 24 karakters, kleine letters, getallen and enkel onderstreep
 _mine.username=Gebruikersnaam
 _portal.menu.languagedropdownlist=Taal
+_portal.ui.notification.generalErrorMessage=Er is iets misgegaan. Een email is verstuurd naar onze technisch afdeling.
 _portal.ui.message.actions=Acties
 _portal.ui.messages.close=Sluiten
 _portal.ui.message.less=Minder
