--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -310,6 +310,7 @@ _portal.ui.message.usertags=Gebruikerstag(s)
 _portal.ui.messages.items=Items
 _portal.ui.messages.query.required=U moet een zoekterm invullen
 _portal.ui.navigation.matchesfor=Zoekresultaten voor
+_portal.ui.navigation.for=voor
 _portal.ui.navigation.next=Volgende
 _portal.ui.navigation.of=van
 _portal.ui.navigation.page=Pagina
