--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -316,6 +316,7 @@ _portal.ui.message.success.search.saved=Search saved
 _portal.ui.message.usertags=User tags
 _portal.ui.messages.items=Items
 _portal.ui.navigation.matchesfor=Matches for
+_portal.ui.navigation.for=voor
 _portal.ui.navigation.next=Next
 _portal.ui.navigation.of=of
 _portal.ui.navigation.page=Page
