Upgraded to solr3.4, optimized the usages of the caches, and hardened the related item queries

--- a/core/src/main/resources/i18n/messages_nl.properties
+++ b/core/src/main/resources/i18n/messages_nl.properties
@@ -18,6 +18,7 @@
 # See the Licence for the specific language governing
 # permissions and limitations under the Licence.
 #
+
 _action.OpenInNewWindow=Opent in een nieuw venster
 _action.add.annotation=null
 _action.add.tag=Voeg een tag toe
@@ -318,6 +319,7 @@ _portal.ui.navigation.results=Resultaten
 _portal.ui.notification.error=Fout
 _portal.ui.notification.noitemsfound=Geen items gevonden
 _portal.ui.notification.tryAnotherSearch=Probeer een nieuwe zoekopdracht
+_portal.ui.notification.malformedQuery=Dit is een incorrecte zoekopdracht.
 _portal.ui.reset.searchbox=Reset
 _portal.ui.viewingrelateditems=U bekijkt gerelateerde items
 _search.boolean.and=en
