statistics sorting order indicator images, cell ordering, translations

--- a/core/src/main/resources/i18n/messages_no.properties
+++ b/core/src/main/resources/i18n/messages_no.properties
@@ -316,8 +316,10 @@ _portal.ui.notification.tryAnotherSearch=<strong>Ver venleg</strong> prøv eit a
 _portal.ui.reset.searchbox=Nullstill
 _portal.ui.statistics=Statistikk
 _portal.ui.statistics.records=Nr. of records
-_portal.ui.statistics.objects=Nr. of digital objects
+_portal.ui.statistics.totalResults=Samlede resultater
+_portal.ui.statistics.objects=Digitale objekt
 _portal.ui.statistics.providers=Providers
+_portal.ui.statistics.name=Navn
 _portal.ui.viewingrelateditems=Du ser relatert innhald
 _search.boolean.and=og
 _search.boolean.not=ikkje
