--- a/core/src/main/resources/i18n/messages_nb.properties
+++ b/core/src/main/resources/i18n/messages_nb.properties
@@ -316,7 +316,8 @@ _portal.ui.notification.tryAnotherSearch=<strong>Vennligst</strong> prøv et ann
 _portal.ui.reset.searchbox=Nullstill
 _portal.ui.statistics=Statistikk
 _portal.ui.statistics.records=Nr. of records
-_portal.ui.statistics.objects=Nr. of digital objects
+_portal.ui.statistics.totalResults=Samlede resultater
+_portal.ui.statistics.objects=Digitale objekt
 _portal.ui.statistics.providers=Providers
 _portal.ui.viewingrelateditems=Du ser relatert innhold
 _search.boolean.and=og
