extra col of stats - nr without dig.obj

--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -338,6 +338,7 @@ _portal.ui.statistics.records=Nr. of records
 _portal.ui.statistics.totalResults=Total results
 _portal.ui.statistics.objects=Nr. of digital objects
 _portal.ui.statistics.providers=Providers
+_portal.ui.statistics.withoutObjects=Without digital objects
 _portal.ui.statistics.name=Name
 _portal.ui.viewingrelateditems=You are viewing related items
 _search.boolean.and=and
