--- a/core/src/main/resources/i18n/messages_nb.properties
+++ b/core/src/main/resources/i18n/messages_nb.properties
@@ -319,6 +319,7 @@ _portal.ui.statistics.records=Nr. of records
 _portal.ui.statistics.totalResults=Samlede resultater
 _portal.ui.statistics.objects=Digitale objekt
 _portal.ui.statistics.providers=Providers
+_portal.ui.statistics.withoutObjects=Utan digitale object
 _portal.ui.viewingrelateditems=Du ser relatert innhold
 _search.boolean.and=og
 _search.boolean.not=ikke
