--- a/core/src/main/resources/i18n/messages_no.properties
+++ b/core/src/main/resources/i18n/messages_no.properties
@@ -319,6 +319,7 @@ _portal.ui.statistics.records=Nr. of records
 _portal.ui.statistics.totalResults=Samlede resultater
 _portal.ui.statistics.objects=Digitale objekt
 _portal.ui.statistics.providers=Providers
+_portal.ui.statistics.withoutObjects=Utan digitale object
 _portal.ui.statistics.name=Navn
 _portal.ui.viewingrelateditems=Du ser relatert innhald
 _search.boolean.and=og
