--- a/core/src/main/resources/i18n/messages.properties
+++ b/core/src/main/resources/i18n/messages.properties
@@ -29,6 +29,7 @@ _action.alt.next.page=Click here for next page of results
 _action.alt.previous.page=click here for previous page of results
 _action.alt.table.view=Table view
 _action.chooselanguage=Choose a language
+_action.filter=Begin typing here to filter
 _action.form.submit=Submit
 _action.personal.page=My Personal Page
 _action.previous=Previous
