--- a/core/src/main/resources/i18n/messages_nb.properties
+++ b/core/src/main/resources/i18n/messages_nb.properties
@@ -29,6 +29,7 @@ _action.alt.next.page=Klikk her for neste resultatside
 _action.alt.previous.page=Klikk her for forrige resultatside
 _action.alt.table.view=Tabellvisning
 _action.chooselanguage=Velg språk
+_action.filter=Skriv søkeord for å avgrense
 _action.form.submit=Send
 _action.personal.page=Mitt Norvegiana
 _action.previous=Forrige
